--- a/proyecto hidroelectrica version preliminar/index.html
+++ b/proyecto hidroelectrica version preliminar/index.html
@@ -188,10 +188,11 @@
   </section>
   </section>
     <footer>
-        <p>Creado por: Andres Rivas, Nicolas Puerta, Santiago Alvarez, Mateo Velmar</p>
+        <p>Creado por: Andres Rivas, Nicolas Puerta, Santiago Alvarez, Mateo Velasquez</p>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="js/dashboard.js"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
+
